# SimpleScrapeX

./: .gitignore  LICENSE  pyproject.toml
notebooks/: testing.ipynb
simple_scrapex/: scrapex.py
